Fix: Change all CSS/JS/image paths to absolute paths for Vercel deployment - fixes header/footer not showing on live site

--- a/frontend/pdf-to-word.html
+++ b/frontend/pdf-to-word.html
@@ -9,8 +9,8 @@
     <title>PDF to Word Converter - Free Online Tool | EasyJPGToPDF</title>
     <meta name="description" content="Convert PDF to Word online for free. Fast, secure, and accurate PDF to DOCX conversion with support for Hindi and Unicode fonts.">
     <meta name="keywords" content="pdf to word, pdf to docx, convert pdf to word, pdf converter, free pdf to word">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -378,8 +378,8 @@
         </div>
     </footer>
     
-    <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="/js/global-components.js"></script>
+    <script src="/js/auth.js"></script>
     <script>
     // Ensure header loads - multiple attempts to guarantee it works
     (function() {
