--- a/frontend/pdf-editor.html
+++ b/frontend/pdf-editor.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Editor - Annotate PDFs</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
     <style>
@@ -515,8 +515,8 @@
     <!-- Global Footer Placeholder -->
     <div id="global-footer-placeholder"></div>
     
-    <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="/js/global-components.js"></script>
+    <script src="/js/auth.js"></script>
     
     <!-- Ensure header and footer load - multiple attempts to guarantee it works -->
     <script>
