--- a/frontend/pdf-to-jpg.html
+++ b/frontend/pdf-to-jpg.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF to JPG Converter</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <style>
         * {
             margin: 0;
@@ -208,8 +208,8 @@
     <!-- Global Footer Placeholder -->
     <div id="global-footer-placeholder"></div>
 
-    <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="/js/global-components.js"></script>
+    <script src="/js/auth.js"></script>
     
     <!-- Ensure header and footer load - multiple attempts to guarantee it works -->
     <script>
