Fix: Complete remaining JS path fixes in index.html to absolute paths

--- a/index.html
+++ b/index.html
@@ -4679,11 +4679,11 @@
         }
     </script>
 
-    <script type="module" src="js/config.js"></script>
-    <script type="module" src="js/firebase-init.js"></script>
-    <script src="js/mobile-menu-init.js"></script>
-    <script type="module" src="js/auth.js"></script>
-    <script type="module" src="js/donate.js"></script>
+    <script type="module" src="/js/config.js"></script>
+    <script type="module" src="/js/firebase-init.js"></script>
+    <script src="/js/mobile-menu-init.js"></script>
+    <script type="module" src="/js/auth.js"></script>
+    <script type="module" src="/js/donate.js"></script>
     
     <!-- Mobile Menu Initialization -->
     <script>
@@ -4963,7 +4963,7 @@
             </div>
         </div>
     </footer>
-    <script src="js/global-components.js"></script>
+    <script src="/js/global-components.js"></script>
     <script>
     // Ensure global header loads properly
     (function() {
