Fix: Add type='module' to auth.js script tags to fix ES6 import error

--- a/frontend/pdf-to-word-converter.html
+++ b/frontend/pdf-to-word-converter.html
@@ -751,7 +751,7 @@
     </script>
     
     <script src="/js/global-components.js"></script>
-    <script src="/js/auth.js"></script>
+    <script type="module" src="/js/auth.js"></script>
     <script>
     // Ensure header loads - multiple attempts to guarantee it works
     (function() {
