--- a/frontend/pdf-to-jpg.html
+++ b/frontend/pdf-to-jpg.html
@@ -209,7 +209,7 @@
     <div id="global-footer-placeholder"></div>
 
     <script src="/js/global-components.js"></script>
-    <script src="/js/auth.js"></script>
+    <script type="module" src="/js/auth.js"></script>
     
     <!-- Ensure header and footer load - multiple attempts to guarantee it works -->
     <script>
