Fix: PDF to Word pages - Match pdf-to-jpg.html style, remove extra frame, add SSL badge, use global footer

--- a/pdf-to-word-converter.html
+++ b/pdf-to-word-converter.html
@@ -481,19 +481,19 @@
         <span id="toastMessage">Conversion successful</span>
     </div>
 
-    <!-- Footer will be loaded here -->
-    <footer>
-        <div class="container">
-            <div style="text-align: center; padding: 40px 20px; background: #2c3e50; color: white;">
-                <p>&copy; 2025 EasyJPGToPDF. All rights reserved.</p>
-                <nav style="margin-top: 20px;">
-                    <a href="/pdf-to-word" style="color: #bdc3c7; margin: 0 10px; text-decoration: none;">PDF to Word</a> |
-                    <a href="/pdf-to-jpg" style="color: #bdc3c7; margin: 0 10px; text-decoration: none;">PDF to JPG</a> |
-                    <a href="/pdf-editor" style="color: #bdc3c7; margin: 0 10px; text-decoration: none;">PDF Editor</a>
-                </nav>
+    <!-- SSL Security Badge -->
+    <div style="margin: 40px 0; padding: 20px; background: white; border-radius: 16px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
+            <i class="fas fa-lock" style="font-size: 2rem; color: #4361ee;"></i>
+            <div>
+                <h3 style="font-size: 1.3rem; color: #0b1630; margin-bottom: 5px;">SSL Secured</h3>
+                <p style="color: #56607a; font-size: 0.95rem;">Your files are encrypted and secure</p>
             </div>
         </div>
-    </footer>
+    </div>
+
+    <!-- Global Footer Placeholder -->
+    <div id="global-footer-placeholder"></div>
 
     <script>
         // Set PDF.js worker
