Final deployment prep: All paths verified, configurations synced, deployment guides added

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -957,7 +957,7 @@
             sessionStorage.setItem('pdfFile', JSON.stringify(fileData));
             
             // Redirect to converter page
-            window.location.replace('/pdf-to-word-converter.html');
+            window.location.replace('/pdf-to-word-converter');
         };
         reader.readAsDataURL(file);
     }
