Update: Backend API URL to new Cloud Run service (pdf-to-word-converter-564572183797)

--- a/frontend/pdf-to-word-converter.html
+++ b/frontend/pdf-to-word-converter.html
@@ -499,7 +499,7 @@
         // Set PDF.js worker
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
         
-        const API_BASE_URL = 'https://pdf-to-word-converter-iwumaktavq-uc.a.run.app';
+        const API_BASE_URL = 'https://pdf-to-word-converter-564572183797.us-central1.run.app';
         
         const previewGrid = document.getElementById('previewGrid');
         const pdfName = document.getElementById('pdfName');
