Add: Quota limits information in Tips section (Free tier and Premium limits)

--- a/pdf-to-word-converter.html
+++ b/pdf-to-word-converter.html
@@ -470,6 +470,35 @@
                         <li><i class="fas fa-check-circle" style="color:var(--primary);"></i> Scanned PDFs use advanced OCR technology.</li>
                         <li><i class="fas fa-check-circle" style="color:var(--primary);"></i> Supports Hindi, Unicode, and international fonts.</li>
                     </ul>
+                    
+                    <div style="margin-top:16px;padding-top:16px;border-top:1px solid var(--border);">
+                        <h4 style="font-size:0.95rem;font-weight:600;color:var(--text);margin-bottom:10px;display:flex;align-items:center;gap:6px;">
+                            <i class="fas fa-info-circle" style="color:var(--primary);"></i> Quota Limits
+                        </h4>
+                        <div style="display:grid;gap:10px;font-size:0.88rem;">
+                            <div style="background:linear-gradient(135deg,#f0f7ff,#e8f4fd);padding:10px;border-radius:6px;border-left:3px solid #4CAF50;">
+                                <div style="font-weight:600;color:#2c5f2d;margin-bottom:4px;">
+                                    <i class="fas fa-user" style="margin-right:6px;"></i>Free Tier (No Login Required)
+                                </div>
+                                <div style="color:#555;line-height:1.6;">
+                                    • Maximum <strong>10 pages</strong> per file<br>
+                                    • Maximum <strong>20MB</strong> file size<br>
+                                    • Text-based PDFs only (no OCR)
+                                </div>
+                            </div>
+                            <div style="background:linear-gradient(135deg,#fff8e1,#fff3c4);padding:10px;border-radius:6px;border-left:3px solid #FF9800;">
+                                <div style="font-weight:600;color:#e65100;margin-bottom:4px;">
+                                    <i class="fas fa-crown" style="margin-right:6px;"></i>Premium Users (With Credits)
+                                </div>
+                                <div style="color:#555;line-height:1.6;">
+                                    • <strong>Unlimited pages</strong> (based on credits)<br>
+                                    • <strong>Unlimited file size</strong> (subject to credits)<br>
+                                    • OCR support for scanned PDFs<br>
+                                    • Cost: <strong>0.5 credits/page</strong> (text) or <strong>1 credit/page</strong> (OCR)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
