--- a/pdf-to-word-converter.html
+++ b/pdf-to-word-converter.html
@@ -478,23 +478,25 @@
                         <div style="display:grid;gap:10px;font-size:0.88rem;">
                             <div style="background:linear-gradient(135deg,#f0f7ff,#e8f4fd);padding:10px;border-radius:6px;border-left:3px solid #4CAF50;">
                                 <div style="font-weight:600;color:#2c5f2d;margin-bottom:4px;">
-                                    <i class="fas fa-user" style="margin-right:6px;"></i>Free Tier (No Login Required)
+                                    <i class="fas fa-user" style="margin-right:6px;"></i>Free Tier (Without Sign In Only)
                                 </div>
                                 <div style="color:#555;line-height:1.6;">
-                                    • Maximum <strong>10 pages</strong> per file<br>
-                                    • Maximum <strong>20MB</strong> file size<br>
-                                    • Text-based PDFs only (no OCR)
+                                    • Maximum <strong>10 pages/day</strong> text conversion<br>
+                                    • Maximum <strong>3 pages/day</strong> OCR conversion<br>
+                                    • Maximum <strong>10MB</strong> file size<br>
+                                    • <strong>Note:</strong> Sign in karne ke baad free quota nahi milega - sirf credits use honge
                                 </div>
                             </div>
                             <div style="background:linear-gradient(135deg,#fff8e1,#fff3c4);padding:10px;border-radius:6px;border-left:3px solid #FF9800;">
                                 <div style="font-weight:600;color:#e65100;margin-bottom:4px;">
-                                    <i class="fas fa-crown" style="margin-right:6px;"></i>Premium Users (With Credits)
+                                    <i class="fas fa-crown" style="margin-right:6px;"></i>Logged-In Users (Credits Only)
                                 </div>
                                 <div style="color:#555;line-height:1.6;">
-                                    • <strong>Unlimited pages</strong> (based on credits)<br>
-                                    • <strong>Unlimited file size</strong> (subject to credits)<br>
+                                    • <strong>Unlimited conversions</strong> (based on credits)<br>
+                                    • Maximum <strong>50MB</strong> file size<br>
                                     • OCR support for scanned PDFs<br>
-                                    • Cost: <strong>0.5 credits/page</strong> (text) or <strong>1 credit/page</strong> (OCR)
+                                    • Cost: <strong>1 credit/page</strong> (text) or <strong>1.5 credits/page</strong> (OCR)<br>
+                                    • <strong>Note:</strong> Logged-in users ko free quota nahi milta - sirf credits use kar sakte hain
                                 </div>
                             </div>
                         </div>
