Remove: Notes about free quota restrictions from quota limits section

--- a/frontend/pdf-to-word-converter.html
+++ b/frontend/pdf-to-word-converter.html
@@ -483,8 +483,7 @@
                                 <div style="color:#555;line-height:1.6;">
                                     • Maximum <strong>10 pages/day</strong> text conversion<br>
                                     • Maximum <strong>3 pages/day</strong> OCR conversion<br>
-                                    • Maximum <strong>10MB</strong> file size<br>
-                                    • <strong>Note:</strong> Sign in karne ke baad free quota nahi milega - sirf credits use honge
+                                    • Maximum <strong>10MB</strong> file size
                                 </div>
                             </div>
                             <div style="background:linear-gradient(135deg,#fff8e1,#fff3c4);padding:10px;border-radius:6px;border-left:3px solid #FF9800;">
@@ -495,8 +494,7 @@
                                     • <strong>Unlimited conversions</strong> (based on credits)<br>
                                     • Maximum <strong>50MB</strong> file size<br>
                                     • OCR support for scanned PDFs<br>
-                                    • Cost: <strong>1 credit/page</strong> (text) or <strong>1.5 credits/page</strong> (OCR)<br>
-                                    • <strong>Note:</strong> Logged-in users ko free quota nahi milta - sirf credits use kar sakte hain
+                                    • Cost: <strong>1 credit/page</strong> (text) or <strong>1.5 credits/page</strong> (OCR)
                                 </div>
                             </div>
                         </div>
