Fix: Remove PyTorch backend, use BiRefNet; Fix image preview in workspace; Update all API endpoints to birefnet; Standardize Cloud Run URLs

--- a/server/public/background-remover.html
+++ b/server/public/background-remover.html
@@ -212,8 +212,8 @@
   
 
   <script type="module">
-    // Google Cloud Run API URL - Connected to u2net rembg backend
-    const CLOUDRUN_API_URL = 'https://bg-remover-api-iwumaktavq-uc.a.run.app/remove-background';
+    // Background removal API - Using BiRefNet backend via proxy
+    const PROXY_API_URL = '/api/background-remove-birefnet';
     const STORAGE_KEYS = {
       original: 'bgRemover:original',
       filename: 'bgRemover:filename'
