Removed duplicate footer and search bar from index page, replaced with 'Our Tools' heading

--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,6 @@
     }
     </script>
 
-    <script src="/js/compact-search.js" defer></script>
 </head>
 <body>
     <!-- Account Section (Above Header) -->
@@ -1656,15 +1655,8 @@
             </div>
         </div>
 
-                    <div class="compact-search-bar">
-                <div class="compact-search-wrapper">
-                    <i class="fas fa-search compact-search-icon"></i>
-                    <input type="text" id="compact-search-input" class="compact-search-input" placeholder="Search tools, pages, blogs..." autocomplete="off">
-                    <div id="compact-search-results" class="compact-search-results"></div>
-                </div>
-            </div>
             <div class="container" id="tools">
-            <h2 class="section-title">Our PDF Tools</h2>
+            <h2 class="section-title">Our Tools</h2>
             <div class="tools-grid">
                 <!-- Convert to PDF Tools -->
                 <div class="tool-card" onclick="location.href='jpg-to-pdf.html'">
