--- a/pricing.html
+++ b/pricing.html
@@ -338,7 +338,7 @@
             <i class="fas fa-clock"></i> Credits expire after 90 days of inactivity
           </div>
           <div class="actions">
-            <button class="btn btn-primary" data-plan="pro" data-credits="900" data-price="40">Buy Now - $40</button>
+            <button class="btn btn-primary" data-plan="pro" data-credits="900" data-price="40" onclick="window.location.href='payment-method.html?plan=pro&credits=900&price=40'">Buy Now - $40</button>
           </div>
         </div>
 
@@ -361,7 +361,7 @@
             <i class="fas fa-clock"></i> Credits expire after 90 days of inactivity
           </div>
           <div class="actions">
-            <button class="btn btn-primary" data-plan="pro-plus" data-credits="5000" data-price="200">Buy Now - $200</button>
+            <button class="btn btn-primary" data-plan="pro-plus" data-credits="5000" data-price="200" onclick="window.location.href='payment-method.html?plan=pro-plus&credits=5000&price=200'">Buy Now - $200</button>
           </div>
         </div>
 
@@ -385,7 +385,7 @@
             <i class="fas fa-clock"></i> Credits expire after 90 days of inactivity
           </div>
           <div class="actions">
-            <button class="btn btn-primary" data-plan="super-premium" data-credits="11000" data-price="400">Buy Now - $400</button>
+            <button class="btn btn-primary" data-plan="super-premium" data-credits="11000" data-price="400" onclick="window.location.href='payment-method.html?plan=super-premium&credits=11000&price=400'">Buy Now - $400</button>
           </div>
         </div>
       </div>
