--- a/payment-method.html
+++ b/payment-method.html
@@ -668,8 +668,32 @@
       // Try importing auth module as fallback
       try {
         const authModule = await import('./js/auth.js');
-        if (authModule && authModule.auth && authModule.auth.currentUser) {
-          return authModule.auth.currentUser.uid;
+        if (authModule && authModule.auth) {
+          const authInstance = authModule.auth;
+          if (authInstance.currentUser && authInstance.currentUser.uid) {
+            return authInstance.currentUser.uid;
+          }
+          
+          // Wait for auth state from module
+          return new Promise((resolve) => {
+            const { onAuthStateChanged } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
+            const unsubscribe = onAuthStateChanged(authInstance, (user) => {
+              unsubscribe();
+              if (user && user.uid) {
+                resolve(user.uid);
+              } else {
+                resolve(null);
+              }
+            });
+            setTimeout(() => {
+              unsubscribe();
+              if (authInstance.currentUser && authInstance.currentUser.uid) {
+                resolve(authInstance.currentUser.uid);
+              } else {
+                resolve(null);
+              }
+            }, 2000);
+          });
         }
       } catch (e) {
         console.warn('Could not import auth module:', e);
