--- a/payment-receipt.html
+++ b/payment-receipt.html
@@ -347,16 +347,34 @@
 <span class="receipt-label" style="color: #666; font-weight: 500;">?????? ????:</span>
 <span class="receipt-value" id="payment-method" style="font-weight: 500; color: #333;">-</span>
 </div>
-<div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
-<span class="receipt-label" style="color: #666; font-weight: 500;">????:</span>
-<span class="receipt-value" id="amount" style="font-weight: 700; color: #2196F3; font-size: 18px;">-</span>
-</div>
-<div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; margin-top: 20px; border-top: 2px solid #f0f0f0;">
-<span class="receipt-label" style="color: #666; font-weight: 600; font-size: 16px;">??????:</span>
-<span class="receipt-value" id="status" style="font-weight: 600; color: #4CAF50; font-size: 16px;">
-<i class="fas fa-check-circle"></i> ???
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 500;">Amount:</span>
+              <span class="receipt-value" id="amount" style="font-weight: 700; color: #2196F3; font-size: 18px;">-</span>
+            </div>
+            ${type === 'credit_purchase' ? `
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 500;">Plan:</span>
+              <span class="receipt-value" id="plan" style="font-weight: 500; color: #333;">-</span>
+            </div>
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 500;">Credits Added:</span>
+              <span class="receipt-value" id="credits" style="font-weight: 700; color: #4361ee; font-size: 18px;">-</span>
+            </div>
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 500;">Current Balance:</span>
+              <span class="receipt-value" id="balance" style="font-weight: 700; color: #28a745; font-size: 18px;">-</span>
+            </div>
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 500;">Credits Expire:</span>
+              <span class="receipt-value" id="expires-at" style="font-weight: 500; color: #333;">-</span>
+            </div>
+            ` : ''}
+            <div class="receipt-row" style="display: flex; justify-content: space-between; padding: 12px 0; margin-top: 20px; border-top: 2px solid #f0f0f0;">
+              <span class="receipt-label" style="color: #666; font-weight: 600; font-size: 16px;">Status:</span>
+              <span class="receipt-value" id="status" style="font-weight: 600; color: #4CAF50; font-size: 16px;">
+                <i class="fas fa-check-circle"></i> Success
                     </span>
-</div>
+            </div>
 </div>
 <div class="receipt-actions no-print" style="display: flex; justify-content: center; gap: 15px; margin-top: 40px;">
 <button class="btn btn-primary" id="print-receipt" style="background-color: #4361ee; color: white; border: none; padding: 12px 25px; border-radius: 5px; font-weight: 500; cursor: pointer; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;">
