--- a/pricing.html
+++ b/pricing.html
@@ -78,7 +78,7 @@
     .plan {
       background: var(--bg-secondary);
       color: var(--text-primary);
-      padding: 20px 18px;
+      padding: 16px 14px;
       border-radius: 12px;
       border: 2px solid var(--border-color);
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
@@ -329,7 +329,7 @@
           <span class="savings-badge">Save 10%</span>
           <ul>
             <li>900 credit points</li>
-            <li>Access to premium tools</li>
+            <li>Premium tools access</li>
             <li>HD background removal</li>
             <li>Advanced PDF processing</li>
             <li>Priority support</li>
@@ -351,7 +351,7 @@
           <span class="savings-badge">Best value</span>
           <ul>
             <li>5000 credit points</li>
-            <li>Access to premium tools</li>
+            <li>Premium tools access</li>
             <li>HD background removal</li>
             <li>Advanced PDF processing</li>
             <li>Priority support</li>
@@ -374,7 +374,7 @@
           <span class="savings-badge">Maximum savings</span>
           <ul>
             <li>11000 credit points</li>
-            <li>Access to premium tools</li>
+            <li>Premium tools access</li>
             <li>HD background removal</li>
             <li>Advanced PDF processing</li>
             <li>Priority support</li>
