Updated all expiry info text to be shorter across all pricing plans

--- a/pricing.html
+++ b/pricing.html
@@ -336,7 +336,7 @@
             <li>Priority support</li>
           </ul>
           <div class="expiry-info">
-            <i class="fas fa-clock"></i> Credits expire after 90 days of inactivity
+            <i class="fas fa-clock"></i> Expires after 90 days
           </div>
           <div class="actions">
             <button class="btn btn-primary" data-plan="pro" data-credits="900" data-price="40" onclick="window.location.href='payment-method.html?plan=pro&credits=900&price=40'">Buy Now - $40</button>
