Removed credit points text below price to reduce card height, kept width same

--- a/pricing.html
+++ b/pricing.html
@@ -326,7 +326,6 @@
           <div class="plan-tag">PRO</div>
           <h3>Pro</h3>
           <div class="price">$40<span> one-time</span></div>
-          <div class="credits">900 Credit Points</div>
           <span class="savings-badge">Save 10%</span>
           <ul>
             <li>900 credit points</li>
@@ -348,10 +347,9 @@
           <div class="plan-tag best-value">BEST VALUE</div>
           <h3>Pro+</h3>
           <div class="price">$200<span> one-time</span></div>
-          <div class="credits">5000 Credit Points</div>
           <span class="savings-badge">Best value</span>
           <ul>
-            <li>5000 credit points</li>
+            <li>5000 credits</li>
             <li>Premium tools</li>
             <li>HD background removal</li>
             <li>Advanced PDF processing</li>
@@ -371,10 +369,9 @@
           <div class="plan-tag max-savings">SUPER PREMIUM</div>
           <h3>Super Premium</h3>
           <div class="price">$400<span> one-time</span></div>
-          <div class="credits">11000 Credit Points</div>
           <span class="savings-badge">Maximum savings</span>
           <ul>
-            <li>11000 credit points</li>
+            <li>11000 credits</li>
             <li>Premium tools</li>
             <li>HD background removal</li>
             <li>Advanced PDF processing</li>
