Fix: Background removal base64 padding and credit manager syntax - Fixed base64 padding issue in bg-remove-free.js API proxy - Added base64 cleaning and padding in backend app.py - Fixed missing closing brace in credit-manager.js catch block - All image upload and background removal issues resolved

--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -580,7 +580,10 @@
             'Content-Type': 'application/json',
             'Accept': 'application/json'
           },
-          body: JSON.stringify({ imageData: dataURL }),
+          body: JSON.stringify({ 
+            imageData: dataURL,
+            imageType: detectedImageType // Send image type for proper routing
+          }),
           signal: controller.signal
         });
         
