--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -41,6 +41,17 @@
     .preview-original, .preview-result { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: contain; transition: opacity 0.6s ease; border: none; outline: none; box-shadow: none; }
     .preview-result { opacity: 0; }
     .preview-stage.revealed .preview-result { opacity: 1; }
+    /* Checkerboard background for transparent PNG preview */
+    .preview-stage { 
+      background-image: 
+        linear-gradient(45deg, #f0f0f0 25%, transparent 25%), 
+        linear-gradient(-45deg, #f0f0f0 25%, transparent 25%), 
+        linear-gradient(45deg, transparent 75%, #f0f0f0 75%), 
+        linear-gradient(-45deg, transparent 75%, #f0f0f0 75%);
+      background-size: 20px 20px;
+      background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+      background-color: #ffffff; /* White fallback */
+    }
     .preview-stage.revealed .preview-original { opacity: 0; }
     .preview-overlay { position: absolute; inset: 0; background: rgba(17, 24, 39, 0.55); display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 12px; color: #fff; font-weight: 600; letter-spacing: 0.03em; transition: opacity 0.4s ease; }
     .preview-stage.revealed .preview-overlay { opacity: 0; pointer-events: none; }
