--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -725,17 +725,10 @@
         console.log('   File type:', fileObject.type);
         console.log('   Field name: "image" (as expected by backend)');
         console.log('   Content-Type: NOT SET (browser will auto-set multipart boundary)');
+        console.log('   FormData fields: image (File), maxSize (512), imageType (' + detectedImageType + ')');
         
-        // Verify FormData has the file
-        const formDataEntries = Array.from(formData.entries());
-        console.log('   FormData entries count:', formDataEntries.length);
-        formDataEntries.forEach(([key, value]) => {
-          if (value instanceof File) {
-            console.log(`   FormData["${key}"] = File(${value.name}, ${value.size} bytes, ${value.type})`);
-          } else {
-            console.log(`   FormData["${key}"] = ${value}`);
-          }
-        });
+        // CRITICAL: DO NOT read FormData.entries() - it consumes the stream!
+        // FormData can only be read once, so reading it here would make body empty for fetch()
         
         const response = await fetch(apiUrl, {
           method: 'POST',
