CRITICAL: Add cache-busting headers to force fresh code load - v2025-01-16-v2

--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-
+<!-- VERSION: 2025-01-16-v2 - STRICT FILE-ONLY FormData - NO JSON/base64 -->
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0"/>
 <title>Background Removal Workspace - AI Background Remover | Remove Background Online Free</title>
     <meta name="description" content="Remove background from images online with AI. Free preview (512px) and premium HD quality (2000-4000px) background removal. Professional GPU-accelerated AI processing.">
     <meta name="keywords" content="background removal, remove background, ai background remover, background workspace, free background removal, hd background removal, transparent background, png background remover">
