Add: Complete verification logs for preview display and file upload events

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -245,6 +245,11 @@
 </section>
 </main>
 <script type="module">
+    // VERSION IDENTIFIER: 2025-01-16-v3-FILE-ONLY-FORMDATA
+    // This helps verify which code version is running on live site
+    console.log('🔍 BACKGROUND-WORKSPACE.HTML VERSION: 2025-01-16-v3-FILE-ONLY-FORMDATA');
+    console.log('🔍 This version uses: FormData + File object ONLY (NO base64, NO JSON)');
+    
     const STORAGE_KEYS = {
       original: 'bgRemover:original',
       filename: 'bgRemover:filename',
